--- a/force-app/main/default/aura/Resource/Resource.cmp
+++ b/force-app/main/default/aura/Resource/Resource.cmp
@@ -4,31 +4,39 @@
 	<aura:attribute name="resourceMode" type="String" default="Default"/>
 	<aura:attribute name="resources" type="ResourceService.ResourceWrapper[]"/>
 	<aura:attribute name="resourceTitle" type="String" default="" access="private"/>
+	<aura:attribute name="errorMessage" type="String" default=""/>
 
 	<aura:handler name="init" value="this" action="{!c.doInit}"/>
 	<aura:handler name="change" value="{!v.resourceMode}" action="{!c.doInit}"/>
 
 	<div class="rr-white-panel resource-card">
-		
+
 		<header class="resource-card-title">
 			{!v.resourceTitle}
 		</header>
 
-		<div>
-			<c:RRSpinner aura:id="spinner" showSpinner="true"/>
-			<lightning:layout horizontalAlign="center" verticalAlign="start" multipleRows="true">
-				<aura:iteration items="{!v.resources}" var="resource">
-					<lightning:layoutItem flexibility="auto" size="12">
-						<c:ResourceItem resource="{!resource}"/>
-					</lightning:layoutItem>
-				</aura:iteration>
-			</lightning:layout>
-		</div>
+		<c:RRSpinner aura:id="spinner" showSpinner="true"/>
 
-		<footer class="resource-footer" style="{!lessthan(v.resources.length, 5) ? 'display: none;' : ''}">
-			See More
-		</footer>
+		<aura:if isTrue="{!v.errorMessage}">
+			<div class="resource-error-message">
+				{!v.errorMessage}
+			</div>
 
+			<aura:set attribute="else">
+				<div>
+					<lightning:layout horizontalAlign="center" verticalAlign="start" multipleRows="true">
+						<aura:iteration items="{!v.resources}" var="resource">
+							<lightning:layoutItem flexibility="auto" size="12">
+								<c:ResourceItem resource="{!resource}"/>
+							</lightning:layoutItem>
+						</aura:iteration>
+					</lightning:layout>
+				</div>
+				<footer class="resource-footer" style="{!lessthan(v.resources.length, 4) ? 'display: none;' : ''}">
+					See More
+				</footer>
+			</aura:set>
+		</aura:if>
 	</div>
 
 </aura:component>
