--- a/force-app/main/default/aura/ResourceContainer/ResourceContainer.css
+++ b/force-app/main/default/aura/ResourceContainer/ResourceContainer.css
@@ -15,3 +15,13 @@
 .THIS .resource-right {
 	margin: auto auto auto 4%;
 }
+
+.THIS.resource-disclaimer {
+	margin-top: 20px;
+	color: #999999;
+	font-family: "Proxima Nova";
+	font-size: 12px;
+	font-style: italic;
+	line-height: 14px;
+	text-align: center;
+}
