--- a/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.cmp
+++ b/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.cmp
@@ -2,27 +2,24 @@
  - Created by Yehor Dobrovolskyi on 20.02.2019.020.
  -->
 
-<aura:component description="ResourcesDetailContainer" implements="forceCommunity:availableForAllPageTypes">
+<aura:component description="ResourcesDetailContainer" implements="forceCommunity:availableForAllPageTypes"
+                controller="ResourcesDetailRemote">
     <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
                   scripts="{!join(',', $Resource.rr_community_js)}"/>
 
-    <!--<aura:attribute name="resourceItem" type="Object" />-->
+    <aura:attribute name="resource" type="ResourceService.ResourceWrapper"/>
     <aura:attribute name="resourceType" type="String" default="Article"/>
     <!--<aura:attribute name="resourceType" type="String" default="Video"/>-->
     <aura:attribute name="studyName" type="String" default="contRAst-1 Rheumatoid Arthritis Study"/>
-    <aura:attribute name="backStudy" type="String" default="/s/"/>
+    <aura:attribute name="backStudy" type="String"/>
 
     <aura:handler name="init" value="this" action="{!c.doInit}"/>
 
     <div>
         <div class="rectangle-8">
-            <div class="rectangle-8-copy">
-                <!--<a class="margin-left-side1 button-back" href="/s/demo-study-tabs">-->
-                <a class="margin-left-side1 button-back" href="{!v.backStudy}">
-                    <c:RRIcon iconName="icon-arrow-left" color="#3294FE" class="icon-back-home"/>
-                    Back to Resources
-                </a>
-            </div>
+            <c:RRLink page="{!v.backStudy}" class="margin-left-side1 button-back">
+                <c:RRIcon iconName="icon-arrow-left" color="#3294FE" class="icon-back-home"/>
+                {!$Label.c.Link_Back_To_Resources}</c:RRLink>
             <div class="study-name-approved margin-left-side1">
                 <div class="study-name">
                     {!v.studyName}
@@ -34,7 +31,7 @@
         </div>
 
         <div class="resource-detail-block">
-            <c:ResourcesDetailItem resourceType="{!v.resourceType}"/>
+            <c:ResourcesDetailItem resource="{!v.resource}"/>
         </div>
     </div>
 </aura:component>
