--- a/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.css
+++ b/force-app/main/default/aura/ResourcesDetailContainer/ResourcesDetailContainer.css
@@ -80,3 +80,8 @@
     height: 14px;
     width: 14px;
 }
+@media all and (max-width: 1140px){
+    .THIS .margin-left-side1{
+        margin-left: 0;
+    }
+}
