--- a/force-app/main/default/aura/ManualTask/ManualTask.cmp
+++ b/force-app/main/default/aura/ManualTask/ManualTask.cmp
@@ -7,35 +7,29 @@
 
     <ltng:require scripts="{!join(',', $Resource.rr_community_js)}" afterScriptsLoaded="{!c.doInit}"/>
 
-    <!--Task detail attribute-->
+    <!--attributes: -->
     <aura:attribute name="task" type="Task"/>
     <aura:attribute name="priorities" type="String[]"/>
-    <aura:attribute name="priority" type="String" default="Medium"/>
-    <aura:attribute name="dateStart" type="Date"/>
-    <aura:attribute name="dateDue" type="Date"/>
     <aura:attribute name="showNumbersAdd" type="Boolean" default="false"/>
     <aura:attribute name="dayDue" type="Integer" default="0"/>
-
-    <!--Filters for Task recipients statuses-->
     <aura:attribute name="patientStatuses" type="List"
                     default="[
                         {'label': 'Prospect', 'value' : 'Prospect'},
                         {'label': 'Referred', 'value' : 'Referred'},
                         {'label': 'Enrolled', 'value' : 'Enrolled'},
-                        {'label': 'Alumni', 'value' : 'Alumni'}
+                        {'label': 'Alumni',   'value' : 'Alumni'}
                         ]"/>
-    <aura:attribute name="status" type="List"/>
-
-    <!--Filter selected fields-->
+    <aura:attribute name="statuses" type="List"/>
     <aura:attribute name="taskFilters" type="ManualTaskFilter"/>
-    <aura:attribute name="areas" type="List"/>
 
+    <!-- component body -->
     <lightning:card title="Configure your tasks parameters below">
+        <c:RRSpinner aura:id="spinner" size="medium" />
         <div class="slds-grid slds-gutters mt-panel">
             <div class="slds-col slds-size--1-of-4">
                 <div class="section-title">Task details</div>
                 <lightning:input label="Enter Subject" value="{!v.task.Subject}" required="true"/>
-                <lightning:select label="Set Priority for the Task:" value="{!v.priority}" required="true">
+                <lightning:select label="Set Priority for the Task:" value="{!v.task.Priority}" required="true">
                     <aura:iteration items="{!v.priorities}" var="prior">
                         <option label="{!prior}" value="{!prior}"/>
                     </aura:iteration>
@@ -67,9 +61,9 @@
                         <lightning:checkboxGroup
                                 name="patientStatus" label="Set Patient Status"
                                 options="{!v.patientStatuses}"
-                                value="{!v.status}" required="true"/>
+                                value="{!v.statuses}" required="true"/>
 
-                        <c:ManualTaskLookup label="Therapeutic Area" selection="{!v.areas}"
+                        <c:ManualTaskLookup label="Therapeutic Area" selection="{!v.taskFilters.areas}"
                                             objType="therapeutic"/>
                         <c:ManualTaskLookup label="Select Sponsor" selection="{!v.taskFilters.sponsors}" objType="sponsor"/>
                     </div>
@@ -83,8 +77,8 @@
             </div>
         </div>
         <div class="slds-text-align_right slds-p-right_small">
-            <lightning:button label="Create" onclick="{!c.createTask}"/>
-            <lightning:button label="Back" onclick="{!c.backAction}"/>
+            <lightning:button variant="brand" label="Create Tasks" onclick="{!c.createTask}"/>
+            <lightning:button label="Reset" onclick="{!c.resetClick}"/>
         </div>
     </lightning:card>
 </aura:component>
