--- a/force-app/main/default/aura/TasksTab/TasksTab.cmp
+++ b/force-app/main/default/aura/TasksTab/TasksTab.cmp
@@ -63,16 +63,13 @@
                     <c:RRTable>
                         <tr>
                             <th>{!$Label.c.Task_Tab_Table_Col_Name}</th>
-                            <th class="priority">{!$Label.c.Task_Tab_Table_Col_Priority}</th>
-                            <th class="completed-by">{!$Label.c.Task_Tab_Table_Col_Completed_By}</th>
-                            <th></th>
+                            <th>{!$Label.c.Task_Tab_Table_Col_Completed_By}</th>
                         </tr>
                         <aura:iteration items="{!v.myTasks}" var="task">
                             <tr>
                                 <td>
                                     <c:RRLink label="{!task.Subject}" page="{!'edit-task?id=' + task.Id}"/>
                                 </td>
-                                <td>{!task.Priority}</td>
                                 <td>
                                     <ui:outputDate value="{!task.ActivityDate}"/>
                                 </td>
