Change map to lightning:map (Google Maps)

--- a/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
+++ b/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
@@ -106,7 +106,7 @@
                         <aura:if isTrue="{!!empty(v.studyDetail.accountEnrollmentsList)}">
                             <div class="sdas-map-body">
                                 <div class="map-container">
-                                    <c:RRMap accounts="{!v.studyDetail.accountEnrollmentsList}"/>
+                                    <c:RRGoogleMap accounts="{!v.studyDetail.accountEnrollmentsList}"/>
                                 </div>
                             </div>
                             <div class="sdas-map-footer">
