Add patient delegates

--- a/unpackaged/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
@@ -148,7 +148,7 @@
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
-        <relatedList>Caregiver__c.Participant__c</relatedList>
+        <relatedList>Patient_Delegate__c.Participant__c</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
