--- a/force-app/main/default/aura/TaskEdit/TaskEdit.cmp
+++ b/force-app/main/default/aura/TaskEdit/TaskEdit.cmp
@@ -13,12 +13,13 @@
     <aura:attribute name="initialized" type="Boolean" default="false"/>
     <aura:attribute name="otherTask" type="Boolean" default="{!v.task.OwnerId != v.task.CreatedById}"/>
     <aura:attribute name="taskStatusCompleted" type="Boolean" default="false"/>
+    <aura:attribute name="reminderFrequencyList" type="String[]" default="1 day before,Compete By Date"/>
 
     <!-- handlers: -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
 
-    <!-- component body: -->
+    <!-- top bar with buttons: -->
     <c:RRSpinner aura:id="spinner" fixed="true" size="medium" showSpinner="true"/>
     <c:RRTopBar backLabel="{!$Label.c.PG_MRR_L_Back_to_Study_Workspace}"
                 backPage="study-workspace"
@@ -117,10 +118,9 @@
     <div style="min-height: 400px;" class="te-task-panel">
         <aura:if isTrue="{!v.initialized}">
             <div class="rr-white-panel padding slds-col" style="min-height: 250px;">
-                <div class="te-col" style="font-size: 18px; margin-bottom: 5px;">
+                <div class="te-col-header">
                     Task Details
                 </div>
-
                 <!--Task Name-->
                 <div class="te-col">
                     <lightning:input name="taskName" label="Task Name" value="{!v.task.Subject}" required="true"
@@ -137,6 +137,27 @@
                         <ui:inputDateTime label="Created Date" value="{!v.task.CreatedDate}" disabled="true"/>
                     </div>
                 </aura:if>
+                <!--Task Type here-->
+
+                <div class="te-col-header" style="margin-top: 15px;">
+                    Task Reminder Details (Optional)
+                </div>
+                <!--Set Reminder-->
+                <div class="te-col">
+                    <lightning:input name="reminderName" label="Set Reminder" value="Email" disabled="true"/>
+                </div>
+                <!--Reminder Frequency-->
+                <div class="te-col">
+                    <lightning:select name="reminderFrequencySelect" label="Reminder Frequency" required="true" onchange="{!c.onChangeFreq}">
+                        <aura:iteration items="{!v.reminderFrequencyList}" var="freq">
+                            <option text="{!freq}"></option>
+                        </aura:iteration>
+                    </lightning:select>
+                </div>
+                <!--Reminder Date-->
+                <div class="te-col">
+                    <lightning:input type="date" aura:id="reminderDateId" min="{!v.todayDate}" label="Reminder Date" value=""/>
+                </div>
             </div>
         </aura:if>
     </div>
