--- a/force-app/main/default/aura/RRProfile/RRProfile.cmp
+++ b/force-app/main/default/aura/RRProfile/RRProfile.cmp
@@ -12,7 +12,9 @@
     <div class="profile-block">
         <div style="display: inline-block" onclick="{!c.toggleMenu}">
                 <!--{!v.profileMenu}-->
-            <lightning:avatar src="{!v.user.SmallPhotoUrl}" alternativeText="{!if(v.userMode=='Participant',v.participantName,v.user.Contact.Name)}" variant="circle" size="medium" fallbackIconName="standard:avatar"/>
+            <lightning:avatar src="{!v.user.SmallPhotoUrl}"
+                              alternativeText="{!if(v.userMode=='Participant',v.participantName,v.user.Contact.Name)}"
+                              variant="circle" size="medium" fallbackIconName="standard:avatar"/>
             <c:RRIcon color="white" iconName="icon-chevron-down" class="chevron"/>
         </div>
         <div class="{!'rrp-menu' + if(v.showMenu, '', ' hide')}" tabindex="-1" aura:id="settingsMenu">
@@ -22,7 +24,8 @@
                     <div class="rrp-menu-item" onclick="{!c.navigateToDelegates}">{!$Label.c.PG_PST_L_Delegates}</div>
                 </aura:set>
             </aura:if>
-            <div class="rrp-menu-item" onclick="{!c.navigateToAccountSettings}">{!$Label.c.Profile_Menu_Account_Settings}</div>
+            <div class="rrp-menu-item"
+                 onclick="{!c.navigateToAccountSettings}">{!$Label.c.Profile_Menu_Account_Settings}</div>
             <div class="rrp-menu-item" onclick="{!c.doLogout}">{!$Label.c.Profile_Menu_Log_Out}</div>
         </div>
         <div class="rr-overlay" onclick="{!c.hideMenu}" style="{!if(v.showMenu, '', 'visibility:hidden')}"></div>
