--- a/force-app/main/default/aura/MyTeam/MyTeam.cmp
+++ b/force-app/main/default/aura/MyTeam/MyTeam.cmp
@@ -1,5 +1,8 @@
 <aura:component controller="MyTeamRemote" description="MyTeam">
 
+    <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
+                  scripts="{!join(',', $Resource.rr_community_js)}"/>
+
     <!-- attributes: -->
     <aura:attribute name="userMode" type="String" description="HCP / PI / Participant"/>
     <aura:attribute name="isInitialized" type="Boolean" default="false"/>
@@ -34,13 +37,18 @@
                     <c:DelegateLevelInfoTable userMode="{!v.userMode}"/>
                 </div>
             </div>
-            <div class="slds-col slds-size_1-of-1 slds-medium-size_8-of-12 slds-order_1 slds-medium-order_2 team-items-panel">
-                <aura:iteration items="{!v.delegates}" var="delegate">
-                    <c:MyTeamItem delegate="{!delegate}" parentComponent="{!this}" options="{!v.delegateOptions}"
-                                  saveInProgress="{!v.saveInProgress}"/>
-                </aura:iteration>
-            </div>
+            <aura:if isTrue="{!and(v.userMode == 'Participant', v.delegates.length == 0)}">
+                <div class="slds-col slds-size_1-of-1 slds-order_1 slds-medium-order_2 empty-list">{!$Label.c.PG_PST_L_Delegates_Click_Add_New}</div>
+                <aura:set attribute="else">
+                    <div class="slds-col slds-size_1-of-1 slds-medium-size_8-of-12 slds-order_1 slds-medium-order_2 team-items-panel">
+                        <aura:iteration items="{!v.delegates}" var="delegate">
+                            <c:MyTeamItem delegate="{!delegate}" parentComponent="{!this}"
+                                          options="{!v.delegateOptions}"
+                                          saveInProgress="{!v.saveInProgress}"/>
+                        </aura:iteration>
+                    </div>
+                </aura:set>
+            </aura:if>
         </div>
     </div>
-
 </aura:component>
