--- a/force-app/main/default/aura/MyTeam/MyTeam.css
+++ b/force-app/main/default/aura/MyTeam/MyTeam.css
@@ -35,3 +35,12 @@
     }
 
 }
+
+.THIS .empty-list {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    text-align: center;
+    color: #999999;
+    font-size: 17px;
+}
