--- a/force-app/main/default/aura/MyTeamItem/MyTeamItem.cmp
+++ b/force-app/main/default/aura/MyTeamItem/MyTeamItem.cmp
@@ -23,7 +23,8 @@
                 {!v.delegate.delegateContact.Email}
         </div>
         <aura:iteration items="{!v.delegate.trialLevels}" var="trialLevel">
-            <c:StudyDelegateLevelItem studyLevel="{!trialLevel}" options="{!v.options}" changedLevels="{!v.changedLevels}" refreshTrigger="{!v.refreshSDLITrigger}"/>
+            <c:StudyDelegateLevelItem studyLevel="{!trialLevel}" options="{!v.options}" changedLevels="{!v.changedLevels}"
+                                      refreshTrigger="{!v.refreshSDLITrigger}"/>
         </aura:iteration>
         <div class="mti-save-button-container">
             <button class="apollo-btn tertiary mti-save-button" onclick="{!c.doSaveChanges}"
