--- a/force-app/main/default/aura/PersonalSettings/PersonalSettings.cmp
+++ b/force-app/main/default/aura/PersonalSettings/PersonalSettings.cmp
@@ -9,6 +9,7 @@
     <aura:attribute name="currentTab" type="String" default="my-team"/>
     <aura:attribute name="showSpinner" type="Boolean" default="true" access="private"/>
     <aura:attribute name="userMode" type="String" description="HCP / PI / Participant" access="private"/>
+    <aura:attribute name="validMode" type="Boolean" default="false" access="private"/>
 
     <!-- handlers: -->
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
@@ -17,7 +18,7 @@
 
     <aura:if isTrue="{!!v.showSpinner}">
         <div class="ps-container">
-            <aura:if isTrue="{!or(v.userMode == 'PI', v.userMode == 'HCP', v.userMode == 'Participant')}">
+            <aura:if isTrue="{!v.validMode}">
                 <c:rrButtonTubSet>
                     <aura:if isTrue="{!v.userMode == 'Participant'}">
                         <c:rrButtonTubSetItem title="{!$Label.c.PG_PST_L_Delegates}" tabId="delegates" currentTab="{!v.currentTab}"/>
